--- a/MapVisualization/style.css
+++ b/MapVisualization/style.css
@@ -1,11 +1,4 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,13 +8,20 @@
 
 }
 
+.leaflet-container {
+  background-color: whitesmoke;
+}
+
 .horizontal {
+  /* background-color: whitesmoke;
+  padding: 1%;
+  border-radius: 20px; */
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
 
 .map {
-  padding: 10px 10px 10px 10px;
+  
   align-items: center;
   grid-column: 3 / span 7;
 }
@@ -48,4 +48,41 @@
 
 .chart {
   align-items: center;
+}
+
+
+/*Legend specific*/
+.legend {
+  padding: 6px 8px;
+  font: 14px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
+  /*border-radius: 5px;*/
+  line-height: 24px;
+  color: #555;
+}
+.legend h4 {
+  text-align: center;
+  font-size: 16px;
+  margin: 2px 12px 8px;
+  color: #777;
+}
+
+.legend span {
+  position: relative;
+  bottom: 3px;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin: 0 8px 0 0;
+  opacity: 0.7;
+}
+
+.legend i.icon {
+  background-size: 18px;
+  background-color: rgba(255, 255, 255, 1);
 }
